--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.ex_03_camera_share"
+        applicationId "com.example.ex_05_motiontracking"
         minSdk 30
         targetSdk 32
         versionCode 1
